--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <!-- BOOTSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-        integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
-        integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous">
-    </script>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <!-- FILE LINKS  -->
@@ -24,7 +20,7 @@
     <script src="./js/script.js"></script>
     <!-- TAB -->
     <link rel="icon" type="image/png" href="img/icons8-solar-system-64.png">
-    <title>PLANETS.COM</title>
+    <title>PLANETEER.COM</title>
 </head>
 
 
@@ -125,25 +121,21 @@
             </div>
             <div class="content">
 
-                <div class="city">
+                <div class="title">
 
-                    <p>Name :</p>
-                    <p id="city"></p>
+                    <p>Title :</p>
+                    <p id="title"></p>
                 </div>
 
-                <div class="temp">
-                    <p>Type :</p>
-                    <p id="temp"></p>
+                <div class="description">
+                    <p>Description :</p>
+                    <p id="description"></p>
                 </div>
 
-                <div class="feel">
-                    <p>Distance From Sun :</p>
-                    <p id="feel"></p>
-                </div>
-
-                <div class="weather">
+                
+                <div class="picture">
                     <P>Picture :</P>
-                    <P id="weather"></P>
+                    <p id="picture"></p>
                 </div>
 
             </div>
