--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
                             aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2"
                             aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -101,6 +103,16 @@
                             <img class="d-block w-100" src="./img/pexels-pixabay-2150.jpg" alt="space pic">
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>SPACE</h3>
+                                <p class="d-none d-sm-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                    Aperiam doloribus rerum enim, sapiente itaque doloremque laborum, officia eius vel
+                                    totam delectus voluptatibus ipsum? Enim voluptatum doloremque, id iusto eos illo.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./img/pexels-pixabay-2150.jpg" alt="space pic">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>Picture Of The Day</h3>
                                 <p class="d-none d-sm-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     Aperiam doloribus rerum enim, sapiente itaque doloremque laborum, officia eius vel
                                     totam delectus voluptatibus ipsum? Enim voluptatum doloremque, id iusto eos illo.
