--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
 
 <body>
     <!-- NAVBAR  -->
-    <nav class="navbar fixed-top navbar-expand-sm navbar-dark">
-        <div class="container">
+    <nav class="navbar fixed-top navbar-expand-lg">
+        <div class="container container-fluid">
             <a class="navbar-brand" href="#"><img src="img/icons8-solar-system-64.png" height="30" width="30" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
-                <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="nucampNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Donate</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">LOGIN</a></li>
-                    </ul>
-                </div>
+            <button class="navbar-toggler navbar-dark bg-dark" type="button" data-bs-toggle="collapse"
+                data-bs-target="#nav" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="nav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="" aria-current="page" href="#">Home</a></li>
+                    <li class="nav-item"><a class="" href="#">About</a></li>
+                    <li class="nav-item"><a class="" href="#">Donate</a></li>
+                    <li class="nav-item"><a class="" href="#contactus">Contact</a></li>
+                    <li class="nav-item"><a class="" href="#">LOGIN</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
-
     <!-- HEADER  -->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -160,7 +160,8 @@
                 <div class="col-12">
                     <label class="visually-hidden" for="inlineFormInputGroupUsername">Username</label>
                     <div class="input-group">
-                        <input type="text" id="fname" class="form-control" name="fname" placeholder="Search Solar System">
+                        <input type="text" id="fname" class="form-control" name="fname"
+                            placeholder="Search Solar System">
                     </div>
                 </div>
                 <div class="col-12">
@@ -170,28 +171,22 @@
         </div>
 
         <!-- FOOTER  -->
-        <footer class="site-footer">
-            <div class="container">
-                <div class="row row-content ">
-                    <div class="col-6 col-sm-5">
-                        <h5 id="social">Social</h5>
+        <div class="container container-fluid">
+            <footer class="site-footer">
+                <div class="row row-content align-items-center">
+                    <div id="contactus" class="col-12">
+                        <h5 id="social">Contact Us</h5>
                         <a id="social" href="http://instagram.com/">Instagram</a>
                         <a id="social" href="http://facebook.com/">Facebook</a>
                         <a id="social" href="http://twitter.com/">Twitter</a>
                         <a id="social" href="http://youtube.com/">YouTube</a>
-                    </div>
-
-                    <div class="col-sm-4" id="contact">
-                        <h5>Contact</h5>
-                        <a href="tel:123-456-7890">123-456-7890</a><br />
-                        <a href="mailto:planeteer_info@planeteer.com?subject = Feedback&body = Message">
-                            Send Us Your Feedback
-                        </a>
+                        <a id="social" href="tel:123-456-7890">Call:123-456-7890</a>
+                        <a id="social" href="mailto:planeteer_info@planeteer.com?subject = Feedback&body = Message">Send
+                            Us Your Feedback</a>
                     </div>
                 </div>
-            </div>
+        </div>
         </footer>
 
 </body>
-
 </html>
