--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2"
                             aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="3"
+                        <button id="buttonoftheday" type="button" data-bs-target="#homeCarousel" data-bs-slide-to="3"
                             aria-label="Slide 4"></button>
                     </div>
                     <div class="carousel-inner">
@@ -114,10 +114,10 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="./img/pexels-alex-andrews-821644.jpg" alt="space pic">
+                           <div id="pictureofday"></div>
                             <div class="carousel-caption d-none d-md-block">
-                                <h3>Picture Of The Day</h3>
-                                <p class="d-none d-sm-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                <h3 id="titleofday"></h3>
+                                <p id="descriptionofday" class="d-none d-sm-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     Aperiam doloribus rerum enim, sapiente itaque doloremque laborum, officia eius vel
                                     totam delectus voluptatibus ipsum? Enim voluptatum doloremque, id iusto eos illo.
                                 </p>
@@ -151,7 +151,7 @@
 
                 <div class="picture">
                     <P>Picture :</P>
-                    <p id="picture"></p>
+                    <div id="picture"></div>
                 </div>
 
             </div>
