--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 </div>
             </div>
         </div>
-        
+
     </header>
-    
+
     <!-- CAROUSEL -->
     <div class="container" id="car">
         <div class="row row-content">
@@ -113,10 +113,11 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                           <div id="pictureofday"></div>
+                            <div id="pictureofday"></div>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3 id="titleofday"></h3>
-                                <p id="descriptionofday" class="d-none d-sm-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                <p id="descriptionofday" class="d-none d-sm-block">Lorem ipsum dolor sit, amet
+                                    consectetur adipisicing elit.
                                     Aperiam doloribus rerum enim, sapiente itaque doloremque laborum, officia eius vel
                                     totam delectus voluptatibus ipsum? Enim voluptatum doloremque, id iusto eos illo.
                                 </p>
@@ -168,24 +169,46 @@
                 </div>
             </form>
         </div>
+<hr>
+        <!-- video -->
 
-        <!-- FOOTER  -->
         <div class="container container-fluid">
-            <footer class="site-footer">
-                <div class="row row-content align-items-center">
-                    <div id="contactus" class="col-12">
-                        <h5 id="social">Contact Us</h5>
-                        <a id="social" href="http://instagram.com/">Instagram</a>
-                        <a id="social" href="http://facebook.com/">Facebook</a>
-                        <a id="social" href="http://twitter.com/">Twitter</a>
-                        <a id="social" href="http://youtube.com/">YouTube</a>
-                        <a id="social" href="tel:123-456-7890">Call:123-456-7890</a>
-                        <a id="social" href="mailto:planeteer_info@planeteer.com?subject = Feedback&body = Message">Send
-                            Us Your Feedback</a>
-                    </div>
+            <div id="search" class="row row-content">
+                <div class="top">
+                    <h1>Space X Launch</h1>
+                    <h1>From 09/15/2021</h1>
                 </div>
-        </div>
-        </footer>
+                <div class="content">
+                    <div class="title">
+                        <div class="row row-content">
+                        <iframe width="420" height="400" src="https://www.youtube-nocookie.com/embed/3pv01sSq44w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                   </div> </div>
+
+
+
+                </div>
+
+            </div>
+<hr>
+            <!-- FOOTER  -->
+            <div class="container container-fluid">
+                <footer class="site-footer">
+                    <div class="row row-content align-items-center">
+                        <div id="contactus" class="col-12">
+                            <h5 id="social">Contact Us</h5>
+                            <a id="social" href="http://instagram.com/">Instagram</a>
+                            <a id="social" href="http://facebook.com/">Facebook</a>
+                            <a id="social" href="http://twitter.com/">Twitter</a>
+                            <a id="social" href="http://youtube.com/">YouTube</a>
+                            <a id="social" href="tel:123-456-7890">Call:123-456-7890</a>
+                            <a id="social"
+                                href="mailto:planeteer_info@planeteer.com?subject = Feedback&body = Message">Send
+                                Us Your Feedback</a>
+                        </div>
+                    </div>
+            </div>
+            </footer>
 
 </body>
+
 </html>
