--- a/index.html
+++ b/index.html
@@ -169,27 +169,35 @@
                 </div>
             </form>
         </div>
-<hr>
+        <hr>
         <!-- video -->
 
         <div class="container container-fluid">
             <div id="search" class="row row-content">
-                <div class="top">
-                    <h1>Space X Launch</h1>
-                    <h1>From 09/15/2021</h1>
+                <div class="top align-self-center">
+                    <div class="col col-sm-3 col-md-2">
+                        <img id="logo" src="./img/spacex.svg" class="img-fluid" />
+                    </div>
+                    <div>
+                        <h1>Space X Launch From 09/15/2021</h1>
+                    </div>
                 </div>
                 <div class="content">
                     <div class="title">
                         <div class="row row-content">
-                        <iframe width="420" height="400" src="https://www.youtube-nocookie.com/embed/3pv01sSq44w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                   </div> </div>
+                            <iframe width="420" height="400" src="https://www.youtube-nocookie.com/embed/3pv01sSq44w"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
 
 
 
                 </div>
 
             </div>
-<hr>
+            <hr>
             <!-- FOOTER  -->
             <div class="container container-fluid">
                 <footer class="site-footer">
