--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse" id="nav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="" aria-current="page" href="#">Home</a></li>
-                    <li class="nav-item"><a class="" href="#">About</a></li>
+                    <li class="nav-item"><a class="" href="./myfavoriteplanet.html">About</a></li>
                     <li class="nav-item"><a class="" href="#">Donate</a></li>
                     <li class="nav-item"><a class="" href="#contactus">Contact</a></li>
                     <li class="nav-item"><a class="" href="#">LOGIN</a></li>
