--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse" id="nav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="" aria-current="page" href="#">Home</a></li>
-                    <li class="nav-item"><a class="" href="./myfavoriteplanet.html">About</a></li>
+                    <li class="nav-item"><a class="" href="#">About</a></li>
                     <li class="nav-item"><a class="" href="#">Donate</a></li>
                     <li class="nav-item"><a class="" href="#contactus">Contact</a></li>
                     <li class="nav-item"><a class="" href="#">LOGIN</a></li>
@@ -85,30 +85,30 @@
                             <img class="d-block w-100" src="./img/pexels-csaba-zelch-7568783.jpg"
                                 alt="Solar system pic">
                             <div class="carousel-caption d-none d-md-block">
-                                <h3>OUR SOLAR SYSTEM</h3>
-                                <p class="d-none d-sm-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Asperiores, illum. Deleniti nesciunt non molestiae consequatur, repellat error eius
-                                    voluptate, doloremque labore blanditiis, quisquam distinctio est sapiente reiciendis
-                                    corrupti fugiat excepturi?</p>
+                                <5h5>OUR SOLAR SYSTEM</h3>
+                                <p class="d-none d-sm-block">The mass of the sun takes up the majority of the solar system.
+                                    Our sun is MASSIVE! In fact, its mass is around 330,000 times that of Earth and
+                                    accounts for 99.86% of the total mass in our solar system.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./img/pexels-brett-sayles-1291144.jpg" alt="moon pic">
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>OUR MOON</h3>
-                                <p class="d-none d-sm-block">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                                    Suscipit animi aperiam vel! Repellendus unde illum voluptates voluptatum quibusdam
-                                    deleniti id quod, esse sequi laborum ducimus quisquam! Facere doloribus quibusdam
-                                    cumque!</p>
+                                <p class="d-none d-sm-block">The Sun and the Moon are not the same size
+                                    From Earth, both the Sun and the Moon look about same size. This is because, the
+                                    Moon is 400 times smaller than the Sun, but also 400 times closer to Earth.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./img/pexels-pixabay-2150.jpg" alt="space pic">
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>SPACE</h3>
-                                <p class="d-none d-sm-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                    Aperiam doloribus rerum enim, sapiente itaque doloremque laborum, officia eius vel
-                                    totam delectus voluptatibus ipsum? Enim voluptatum doloremque, id iusto eos illo.
+                                <p class="d-none d-sm-block">Space fact: Space is completely silent.
+                                    Sound waves need a medium to travel through. Since there is no atmosphere in the
+                                    vacuum of space, the realm between stars will always be eerily silent.
+                                    That said, worlds with atmospheres and air pressure do allow sound to travel, hence
+                                    why there's plenty of noise on Earth and likely other planets as well.
                                 </p>
                             </div>
                         </div>
@@ -116,11 +116,7 @@
                             <div id="pictureofday"></div>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3 id="titleofday"></h3>
-                                <p id="descriptionofday" class="d-none d-sm-block">Lorem ipsum dolor sit, amet
-                                    consectetur adipisicing elit.
-                                    Aperiam doloribus rerum enim, sapiente itaque doloremque laborum, officia eius vel
-                                    totam delectus voluptatibus ipsum? Enim voluptatum doloremque, id iusto eos illo.
-                                </p>
+                                <p id="descriptionofday" class="d-none d-sm-block"></p>
                             </div>
                         </div>
                     </div>
@@ -134,6 +130,7 @@
         <div id="search" class="row row-content">
             <div class="top">
                 <h1>SEARCH SOLAR SYSTEM</h1>
+                <h4>Know Your Home</h4>
             </div>
             <div class="content">
 
