--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <img class="d-block w-100" src="./img/pexels-csaba-zelch-7568783.jpg"
                                 alt="Solar system pic">
                             <div class="carousel-caption d-none d-md-block">
-                                <5h5>OUR SOLAR SYSTEM</h3>
+                                <h3>OUR SOLAR SYSTEM</h3>
                                 <p class="d-none d-sm-block">The mass of the sun takes up the majority of the solar system.
                                     Our sun is MASSIVE! In fact, its mass is around 330,000 times that of Earth and
                                     accounts for 99.86% of the total mass in our solar system.</p>
