--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@
             <div class="content">
 
                 <div class="title">
-
                     <p>Title :</p>
                     <p id="title"></p>
                 </div>
@@ -196,8 +195,8 @@
             </div>
             <hr>
             <!-- FOOTER  -->
+            <footer class="site-footer">
             <div class="container container-fluid">
-                <footer class="site-footer">
                     <div class="row row-content align-items-center">
                         <div id="contactus" class="col-12">
                             <h5 id="social">Contact Us</h5>
@@ -209,9 +208,11 @@
                             <a id="social"
                                 href="mailto:planeteer_info@planeteer.com?subject = Feedback&body = Message">Send
                                 Us Your Feedback</a>
+                                <p id="copyright">&copy; Copyright 2021 UNKOWN</p>
                         </div>
                     </div>
             </div>
+
             </footer>
 
 </body>
