--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- NAVBAR  -->
     <nav class="navbar fixed-top navbar-expand-lg">
         <div class="container container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/icons8-solar-system-64.png" height="30" width="30" /></a>
+            <a class="navbar-brand" href="#"><img src="./img/icons8-solar-system-64.png" height="30" width="30" /></a>
             <button class="navbar-toggler navbar-dark bg-dark" type="button" data-bs-toggle="collapse"
                 data-bs-target="#nav" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -175,7 +175,7 @@
                         <img id="logo" src="./img/spacex.svg" class="img-fluid" />
                     </div>
                     <div>
-                        <h1>Space X Launch From 09/15/2021</h1>
+                        <h1>Space X Launch From 09/15/2021 <a class="navbar-brand" href="#"><img src="./img/3a0d5c55702604d706c636a94b5c1afd.gif" height="40" width="40" /></a></h1>
                     </div>
                 </div>
                 <div class="content">
