--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
             </form>
         </div>
-        <hr>
+        
         <!-- video -->
 
         <div class="container container-fluid">
@@ -175,25 +175,27 @@
                         <img id="logo" src="./img/spacex.svg" class="img-fluid" />
                     </div>
                     <div>
-                        <h1>Space X Launch From 09/15/2021 <a class="navbar-brand" href="#"><img src="./img/3a0d5c55702604d706c636a94b5c1afd.gif" height="40" width="40" /></a></h1>
+                        <h1>Space X Launch From 09/15/2021 <img id="gif" src="./img/3a0d5c55702604d706c636a94b5c1afd.gif" height="40" width="40"/></h1>
                     </div>
                 </div>
                 <div class="content">
                     <div class="title">
                         <div class="row row-content">
-                            <iframe width="420" height="400" src="https://www.youtube-nocookie.com/embed/3pv01sSq44w"
+                            <iframe width="400" height="400" src="https://www.youtube-nocookie.com/embed/3pv01sSq44w"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                                allowfullscreen>
+                            </iframe>
                         </div>
                     </div>
-
-
-
                 </div>
+            </div> 
+        </div>
 
-            </div>
-            <hr>
+
+
+
+
             <!-- FOOTER  -->
             <footer class="site-footer">
             <div class="container container-fluid">
