--- a/index.html
+++ b/index.html
@@ -22,33 +22,71 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/script.js"></script>
     <!-- TAB -->
-    <link rel="icon" type="image/png" href="img/icons8-solar-system-64.png">
+    <link rel="icon" type="image/png" href="img/icons8-solar-system-64.png" class="img-fluid">
     <title>PLANETEER.COM</title>
 </head>
 
 
 
 <body>
+
     <!-- NAVBAR  -->
     <nav class="navbar fixed-top navbar-expand-lg">
         <div class="container container-fluid">
             <a class="navbar-brand" href="#"><img src="./img/icons8-solar-system-64.png" height="30" width="30" /></a>
             <button class="navbar-toggler navbar-dark bg-dark" type="button" data-bs-toggle="collapse"
                 data-bs-target="#nav" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="nav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="" aria-current="page" href="#">Home</a></li>
                     <li class="nav-item"><a class="" href="#">About</a></li>
                     <li class="nav-item"><a class="" href="#">Donate</a></li>
                     <li class="nav-item"><a class="" href="#contactus">Contact</a></li>
-                    <li class="nav-item"><a class="" href="#">LOGIN</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+
+
+
+
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Astronomy Picture Of The Day</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- ... picture 4 PICTURE OF THE DAY-->
+                    <div class="container">
+                        <div class="row row-content">
+                            <div class="col-md-8 mx-auto">
+                        <div class="carimgpic d-block w-100 img-fluid">
+                            <div class="d-block w-100 img-fluid" id="pictureofday"></div>
+                            <div class="d-block w-100 img-fluid" id="videoofday"></div>
+                            <div class="d-block w-100 img-fluid">
+                                <h3 id="titleofday"></h3>
+                                <p id="descriptionofday" class="d-none d-sm-block"></p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary bg-dark" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- HEADER  -->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -59,10 +97,14 @@
                 <div class="col">
                     <h1>Planeteer</h1>
                     <h2>Know Your Home</h2>
+                    <!-- Button trigger modal -->
+                    <button id="buttonoftheday" type="button" class="btn btn-primary bg-dark" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop">
+                        Astronomy Picture Of The Day
+                    </button>
                 </div>
             </div>
         </div>
-
     </header>
 
     <!-- CAROUSEL -->
@@ -77,31 +119,35 @@
                             aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2"
                             aria-label="Slide 3"></button>
-                        <button id="buttonoftheday" type="button" data-bs-target="#homeCarousel" data-bs-slide-to="3"
-                            aria-label="Slide 4"></button>
+                        <!-- <button id="buttonoftheday" type="button" data-bs-target="#homeCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button> -->
                     </div>
+                    <!-- picture 1 -->
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="./img/pexels-csaba-zelch-7568783.jpg"
+                        <div class="carimgpic carousel-item active">
+                            <img class="d-block w-100 img-fluid" src="./img/pexels-csaba-zelch-7568783.jpg"
                                 alt="Solar system pic">
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>OUR SOLAR SYSTEM</h3>
-                                <p class="d-none d-sm-block">The mass of the sun takes up the majority of the solar system.
-                                    Our sun is MASSIVE! In fact, its mass is around 330,000 times that of Earth and
-                                    accounts for 99.86% of the total mass in our solar system.</p>
+                                <p class="d-none d-sm-block">The mass of the sun takes up the majority of the solar
+                                    system. Our sun is MASSIVE! In fact, its mass is around 330,000 times that of Earth
+                                    and accounts for 99.86% of the total mass in our solar system.</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="./img/pexels-brett-sayles-1291144.jpg" alt="moon pic">
+                        <!-- picture 2  -->
+                        <div class="carimgpic carousel-item">
+                            <img class="d-block w-100 img-fluid" src="./img/pexels-brett-sayles-1291144.jpg"
+                                alt="moon pic">
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>OUR MOON</h3>
-                                <p class="d-none d-sm-block">The Sun and the Moon are not the same size
-                                    From Earth, both the Sun and the Moon look about same size. This is because, the
-                                    Moon is 400 times smaller than the Sun, but also 400 times closer to Earth.</p>
+                                <p class="d-none d-sm-block">The Sun and the Moon are not the same size from Earth, both
+                                    the Sun and the Moon look about same size. This is because, the Moon is 400 times
+                                    smaller than the Sun, but also 400 times closer to Earth.</p>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="./img/pexels-pixabay-2150.jpg" alt="space pic">
+                        <!-- picture 3  -->
+
+                        <div class="carimgpic carousel-item">
+                            <img class="d-block w-100 img-fluid" src="./img/pexels-pixabay-2150.jpg" alt="space pic">
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>SPACE</h3>
                                 <p class="d-none d-sm-block">Space fact: Space is completely silent.
@@ -112,13 +158,17 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <!-- picture 4 PICTURE OF THE DAY-->
+
+                        <!-- <div class="carimgpic carousel-item">
                             <div id="pictureofday"></div>
+                            <div id="videoofday"></div>>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3 id="titleofday"></h3>
                                 <p id="descriptionofday" class="d-none d-sm-block"></p>
                             </div>
-                        </div>
+                        </div> -->
+
                     </div>
                 </div>
             </div>
@@ -127,11 +177,14 @@
 
     <!-- SEARCH  -->
     <div class="container">
+
         <div id="search" class="row row-content">
+
             <div class="top">
                 <h1>SEARCH SOLAR SYSTEM</h1>
                 <h4>Know Your Home</h4>
             </div>
+
             <div class="content">
 
                 <div class="title">
@@ -139,11 +192,15 @@
                     <p id="title"></p>
                 </div>
 
+                <div class="dateof">
+                    <p>Date :</p>
+                    <p id="dateof"></p>
+                </div>
+
                 <div class="description">
                     <p>Description :</p>
                     <p id="description"></p>
                 </div>
-
 
                 <div class="picture">
                     <P>Picture :</P>
@@ -151,23 +208,23 @@
                 </div>
 
             </div>
+
             <!-- input field  -->
             <form class="row row-cols-lg-auto g-3 align-items-center">
                 <div class="col-12">
-                    <label class="visually-hidden" for="inlineFormInputGroupUsername">Username</label>
                     <div class="input-group">
                         <input type="text" id="fname" class="form-control" name="fname"
                             placeholder="Search Solar System">
                     </div>
                 </div>
+                <!-- Search button -->
                 <div class="col-12">
                     <input type="submit" class="btn btn-primary" id="lname" name="lname" value="Get Info">
                 </div>
             </form>
         </div>
-        
-        <!-- video -->
 
+        <!-- video -->
         <div class="container container-fluid">
             <div id="search" class="row row-content">
                 <div class="top align-self-center">
@@ -175,7 +232,8 @@
                         <img id="logo" src="./img/spacex.svg" class="img-fluid" />
                     </div>
                     <div>
-                        <h1>Space X Launch From 09/15/2021 <img id="gif" src="./img/3a0d5c55702604d706c636a94b5c1afd.gif" height="40" width="40"/></h1>
+                        <h1>Space X Launch From 09/15/2021 <img id="gif"
+                                src="./img/3a0d5c55702604d706c636a94b5c1afd.gif" height="40" width="40" /></h1>
                     </div>
                 </div>
                 <div class="content">
@@ -189,34 +247,27 @@
                         </div>
                     </div>
                 </div>
-            </div> 
+            </div>
         </div>
 
-
-
-
-
-            <!-- FOOTER  -->
-            <footer class="site-footer">
+        <!-- FOOTER  -->
+        <footer class="site-footer">
             <div class="container container-fluid">
-                    <div class="row row-content align-items-center">
-                        <div id="contactus" class="col-12">
-                            <h5 id="social">Contact Us</h5>
-                            <a id="social" href="http://instagram.com/">Instagram</a>
-                            <a id="social" href="http://facebook.com/">Facebook</a>
-                            <a id="social" href="http://twitter.com/">Twitter</a>
-                            <a id="social" href="http://youtube.com/">YouTube</a>
-                            <a id="social" href="tel:123-456-7890">Call:123-456-7890</a>
-                            <a id="social"
-                                href="mailto:planeteer_info@planeteer.com?subject = Feedback&body = Message">Send
-                                Us Your Feedback</a>
-                                <p id="copyright">&copy; Copyright 2021 UNKOWN</p>
-                        </div>
+                <div class="row row-content align-items-center">
+                    <div id="contactus" class="col-12">
+                        <h5 id="social">Contact Us</h5>
+                        <a id="social" href="http://instagram.com/">Instagram</a>
+                        <a id="social" href="http://facebook.com/">Facebook</a>
+                        <a id="social" href="http://twitter.com/">Twitter</a>
+                        <a id="social" href="http://youtube.com/">YouTube</a>
+                        <a id="social" href="tel:123-456-7890">Call:123-456-7890</a>
+                        <a id="social" href="mailto:planeteer_info@planeteer.com?subject = Feedback&body = Message">Send
+                            Us Your Feedback</a>
+                        <p id="copyright">&copy; Copyright 2021 UNKOWN</p>
                     </div>
+                </div>
             </div>
-
-            </footer>
-
+        </footer>
 </body>
 
 </html>
