--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="" aria-current="page" href="#">Home</a></li>
                     <li class="nav-item"><a class="" href="#">About</a></li>
-                    <li class="nav-item"><a class="" href="#">Donate</a></li>
+                    <li class="nav-item"><a class="" href="#donate">Donate</a></li>
                     <li class="nav-item"><a class="" href="#contactus">Contact</a></li>
                 </ul>
             </div>
@@ -175,6 +175,22 @@
         </div>
     </div>
 
+<!-- news feed -->
+
+    <div class="container">
+  <div class="row align-items-center">
+    <div class="col">
+      One of three columns
+    </div>
+    <div class="col">
+      One of three columns
+    </div>
+    <div class="col">
+      One of three columns
+    </div>
+  </div>
+</div>
+
     <!-- SEARCH  -->
     <div class="container">
 
@@ -250,7 +266,28 @@
             </div>
         </div>
 
+<!-- resources & donate  -->
+
+        <div class="container">
+  <div id="donate" class="row g-2">
+    <div class="col-6">
+      <div class="p-3 border bg-light">NASA WEBSITE</div>
+    </div>
+    <div class="col-6">
+      <div class="p-3 border bg-light">SPACE X WEBSITE</div>
+    </div>
+    <div class="col-6">
+      <div class="p-3 border bg-light">DONATE</div>
+    </div>
+    <div class="col-6">
+      <div class="p-3 border bg-light">OTHER RESOURCES</div>
+    </div>
+  </div>
+</div>
+<hr>
+
         <!-- FOOTER  -->
+
         <footer class="site-footer">
             <div class="container container-fluid">
                 <div class="row row-content align-items-center">
