--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                             <a id="social"
                                 href="mailto:planeteer_info@planeteer.com?subject = Feedback&body = Message">Send
                                 Us Your Feedback</a>
-                            <p id="copyright">&copy; Copyright 2021 UNKOWN</p>
+                            <p id="copyright">&copy; Copyright 2021 & All Rights Reserved NASA & Space X - Design by Mario Rojas</p>
                         </div>
                     </div>
                 </div>
