--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
 
 
                         </div>
-                        <form action="">
-                            <input class="btn bg-light" type="text" name="addItem" placeholder="Add Planet"
+                        <form class="">
+                            <input class="form-label bg-light" type="text" name="addItem" placeholder="Add Planet"
                                 id="valuefrominputtext">
                             <button class="btn btn-primary " id="submitButtonForMyFav" type="submit">Submit</button>
                         </form>
